--- a/backend/package.json
+++ b/backend/package.json
@@ -9,10 +9,13 @@
   "author": "Somik Dasgupta and Shabab Mosharraf",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "csv-parser": "^3.0.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.1",
     "nodemon": "^3.0.1",
     "oracledb": "^6.0.3"
   }
