--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,10 +16,12 @@
     "@fortawesome/fontawesome-svg-core": "^6.4.2",
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@mui/material": "^5.14.6",
+    "axios": "^1.5.0",
     "bootstrap": "^5.3.1",
     "chart.js": "^4.4.0",
     "js-cookie": "^3.0.5",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
     "react-router-dom": "^6.15.0",
